[package]
name = "stmt-parser"
version = "0.1.0"
authors = ["Südi Tamás <suditomi@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vars-parser = { path = "../vars-parser" }
derive_more = "0.99"
pest = "2.1"
pest_derive = "2.1"
