[package]
name = "vars-parser"
version = "0.1.0"
authors = ["Südi Tamás <suditomi@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.4"

[dependencies]
derive_more = "0.99"
lalrpop-util = "0.19.4"
regex = "1"
expr-parser = { path = "../expr-parser" }
